# ac-bot-v2

./: .gitignore  App.py  Makefile  README.md  pyproject.toml
TaskPackage/: Task.py  TaskResolver.py
TaskPackage/Battle/: CheckBattleList.py
src/: App.py  GameContext.py
src/Cavebot/: CaveBot.py  Cavebot.py  Script.py  __init__.py
src/ConsolePackage/: Console.py  __init__.py
src/GamePackage/: Map.py  MapTile.py  PathFinder.py  Player.py  Script.py  TradeScript.py  Waypoint.py  __init__.py
src/LoggerPackage/: Logger.py
src/OperatingSystemPackage/: Console.py  Kernel.py  Keyboard.py  Monitor.py  Mouse.py  __init__.py
src/OperatingSystemPackage/Errors/: WindowSearchCommandError.py
src/OperatingSystemPackage/Exception/: CommandExecutionException.py
src/OperatingSystemPackage/Widget/: GlobalGameWidgetContainer.py
src/Shared/: Coordinate.py  Creature.py
src/SharedPackage/: Constants.py  Coordinate.py  Creature.py  DeadCreature.py  GameContext.py  GameSession.py  MarketItem.py  Offer.py  Waypoint.py  __init__.py
src/SharedPackage/PyAutoGui/: PyAutoGui.py
src/SharedPackage/Widget/: GameWidgetPosition.py
src/TaskPackage/: ExtractGameContextDataTask.py  GameContext.py  Task.py  TaskResolver.py  __init__.py
src/TaskPackage/Battle/: CheckBattleList.py  ExtractBattleListDataTask.py
src/Trader/: AutoTrader.py  __init__.py
src/Train/: AutoTrainer.py  __init__.py
src/UtilPackage/: Array.py  GenericMapCollection.py  LinkedList.py  MapCollection.py  Node.py  Number.py  Time.py  __init__.py
src/VendorPackage/: __init__.py
(+49 files in other folders)
