[tool.poetry]
name = "ac-bot-v2"
version = "1.0.0"
description = "none"
authors = ["Adriein <adria.claret@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
