[tool.poetry]
name = "ac-bot-v2"
version = "1.0.0"
description = "none"
authors = ["Adriein <adria.claret@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.10"
pyautogui = "^0.9.54"
opencv-python = "^4.8.1.78"
python3-xlib = "^0.15"
python-xlib = "^0.33"
rich = "^13.7.0"
mss = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
